[gd_scene load_steps=9 format=3 uid="uid://cprb7bvw86a6i"]

[ext_resource type="Script" path="res://Fishing.gd" id="1_m66ae"]
[ext_resource type="PackedScene" uid="uid://bvr3nhm1g883h" path="res://Fishing/Mob.tscn" id="2_kl86e"]
[ext_resource type="PackedScene" uid="uid://cobc0a5fyfjku" path="res://Fishing/Hook.tscn" id="3_8hf71"]
[ext_resource type="PackedScene" uid="uid://yctgbm31sj6q" path="res://Fishing/Cushion.tscn" id="3_ch7s3"]
[ext_resource type="Texture2D" uid="uid://dildofse7ddij" path="res://art/fishing_bg.png" id="3_cnorg"]
[ext_resource type="PackedScene" uid="uid://dkmvmpep0ln7g" path="res://Fishing/HUD.tscn" id="6_18lr7"]

[sub_resource type="Curve2D" id="Curve2D_34ofl"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1152, 280, 0, 0, 0, 0, 1152, 648)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_c0y7g"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 648, 0, 0, 0, 0, 0, 296)
}
point_count = 2

[node name="Fishing" type="Node"]
script = ExtResource("1_m66ae")
mob_scene = ExtResource("2_kl86e")
cushion_scene = ExtResource("3_ch7s3")

[node name="HUD" parent="." instance=ExtResource("6_18lr7")]

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_cnorg")

[node name="Hook" parent="." instance=ExtResource("3_8hf71")]
position = Vector2(2.08165e-12, 2.08165e-12)
scale = Vector2(3, 3)

[node name="MobTimer" type="Timer" parent="."]
autostart = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(585, 300)

[node name="MobPathR" type="Path2D" parent="."]
curve = SubResource("Curve2D_34ofl")

[node name="MobSpawnLocationR" type="PathFollow2D" parent="MobPathR"]
position = Vector2(1152, 280)
rotation = 1.5708

[node name="MobPathL" type="Path2D" parent="."]
curve = SubResource("Curve2D_c0y7g")

[node name="MobSpawnLocationL" type="PathFollow2D" parent="MobPathL"]
position = Vector2(0, 648)
rotation = -1.5708

[connection signal="body_entered" from="Hook" to="." method="hook_body_entered"]
[connection signal="body_exited" from="Hook" to="." method="hook_body_exited"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
